# Todo-Rust

./: .env  Cargo.toml
src/: error.rs  main.rs
src/config/: database.rs
src/handlers/: handler_tasks.rs  mod.rs
src/model/: task.rs
src/routes/: mod.rs  router_task.rs
