[package]
name = "tasks"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
uuid = { version = "1.21.0", features = ["v4", "serde"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "macros"] }
thiserror = "2.0.18"
